# Toaster

./: .gitignore  CMakeLists.txt  main.cpp
.github/: README.md
DataBase/: CMakeLists.txt
DataBase/include/: DataBase.hpp
DataBase/src/: DataBase.cpp
Toaster/: CMakeLists.txt  README.md  TOKEN  vote.txt
Toaster/src/: main.cpp
ToasterChan/: CMakeLists.txt  README.md  TOKEN
ToasterChan/src/: main.cpp
hello_project/: CMakeLists.txt  main.cpp
include/: chatbot.hpp  llm.hpp  stt.hpp  tts.hpp
lib/: CMakeLists.txt  config.h.in
lib/DataBase/: CMakeLists.txt
lib/DataBase/include/: DataBase.hpp
lib/DataBase/src/: DataBase.cpp
lib/util/: util.hpp
lib/util/include/: util.hpp
lib/util/src/: util.cpp
music_management/include/: commands.hpp
music_management/src/: main.cpp
old/dc-bot/: CMakeLists.txt
old/lib/music_management/: CMakeLists.txt
old/lib/music_management/include/: commands.hpp
old/lib/util/: CMakeLists.txt
old/llm-server/: CMakeLists.txt  main.cpp
prompts/: prompt.txt  prompt2.txt
src/: Project.cpp  chatbot.cpp  llm.cpp  main.cpp  piper.cpp  stt.cpp
src/include/: DataBase.h  fileutil.hpp  llm.hpp  sqeel.h  util.hpp
